--- a/gerenciamento-lab/src/main/resources/application.properties
+++ b/gerenciamento-lab/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=gerenciamento-lab
+spring.datasource.url=jdbc:postgresql://
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
