com dockerfile e rende.yaml

--- a/gerenciamento-lab/src/main/resources/application.properties
+++ b/gerenciamento-lab/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+springdoc.swagger-ui.path=/aula/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+
 spring.application.name=gerenciamento-lab
 spring.datasource.url=jdbc:postgresql://
 spring.datasource.username=
