--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ springdoc.api-docs.enabled=true
 
 spring.application.name=gerenciamento-lab
 spring.datasource.url=jdbc:postgresql://
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=laboratorio_p4vx_user
+spring.datasource.password=nzrhvQ064RmMdcL0KlP4RHxoJ2p3HP8I
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
