--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 
 spring.application.name=gerenciamento-lab
-spring.datasource.url=jdbc:postgresql://
+spring.datasource.url=jdbc:postgresql://dpg-d4ius5muk2gs73bgaha0-a.oregon-postgres.render.com/laboratorio_p4vx
 spring.datasource.username=laboratorio_p4vx_user
 spring.datasource.password=nzrhvQ064RmMdcL0KlP4RHxoJ2p3HP8I
 spring.jpa.hibernate.ddl-auto=update
